apps/kong/clusters/sg3/middleware-auth.yaml
# Basic Authentication Middleware for Kong Manager
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kong-manager-auth
  namespace: kong
spec:
  basicAuth:
    secret: kong-manager-basic-auth
