apps/kong/clusters/sg3/ingress-manager.yaml
# Ingress for Kong Manager GUI
# OAuth2 paths (/oauth2/*) are handled by a separate ingress in the oauth2-proxy namespace
# See: /apps/oauth2-proxy/clusters/sg3/ingress-kong-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-manager
  namespace: kong
  annotations:
    cert-manager.io/cluster-issuer: "canhnv-com-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # OAuth2 Proxy middleware for security
    # Using oauth2-proxy-chain from oauth2-proxy namespace for proper cross-namespace support
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-oauth2-proxy-chain@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kong-manager.sg3.canhnv.com
      secretName: kong-manager-tls
  rules:
    - host: kong-manager.sg3.canhnv.com
      http:
        paths:
          # Kong Manager - protected by OAuth2 middleware
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-kong-manager
                port:
                  number: 8002
